--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@iconify-json/fa6-brands": "^1.2.5",
     "@tailwindcss/vite": "^4.0.9",
     "astro": "^5.3.0",
-    "astro-i18next": "^1.0.0-beta.21",
+    "astro-i18next": "^2.0.0",
     "astro-icon": "^1.1.5",
     "i18next": "^25.2.1",
     "swiper": "^11.2.4",
